--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       "not dead",
       "not op_mini all"
     ],
+    "resolutions": {
+      "mini-css-extract-plugin": "2.4.5"
+    },
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
