--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "webpack": "^4.29.6"
   },
   "engines": {
     "node": "16.13.1"
